name:                matterhorn
version:             40901.0.0
synopsis:            Terminal client for the Mattermost chat system
description:         This is a terminal client for the Mattermost chat
                     system. Please see the README for a list of
                     features and information on getting started.
license:             BSD3
license-file:        LICENSE
author:              matterhorn@galois.com
maintainer:          matterhorn@galois.com
copyright:           ©2016-2018 AUTHORS.txt
category:            Chat
build-type:          Simple
cabal-version:       >= 1.18
tested-with:         GHC == 7.10.3, GHC == 8.0.1

data-files:          syntax/*.xml
                     syntax/language.dtd
                     syntax/LICENSE

extra-doc-files:     CHANGELOG.md
                     README.md
                     PRACTICES.md
                     scripts/cowsay
                     scripts/figlet
                     scripts/rot13
                     notification-scripts/notify

source-repository    head
  type: git
  location: https://github.com/matterhorn-chat/matterhorn.git

library
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables,
                       NoImplicitPrelude
  ghc-options:         -Wall -Werror
  exposed-modules:     Config
                       Command
                       Connection
                       Completion
                       App
                       Clipboard
                       Constants
                       State.Async
                       State.Channels
                       State.ChannelScroll
                       State.ChannelSelect
                       State.Common
                       State.Editing
                       State.Flagging
                       State.Help
                       State.Logging
                       State.Messages
                       State.MessageSelect
                       State.PostListOverlay
                       State.Reactions
                       State.Setup
                       State.Setup.Threads
                       State.Setup.Threads.Logging
                       State.Themes
                       State.UrlSelect
                       State.UserListOverlay
                       State.Users
                       Zipper
                       Themes
                       Draw
                       Draw.Main
                       Draw.Messages
                       Draw.ChannelList
                       Draw.ShowHelp
                       Draw.LeaveChannelConfirm
                       Draw.DeleteChannelConfirm
                       Draw.PostListOverlay
                       Draw.UserListOverlay
                       Draw.JoinChannel
                       Draw.Util
                       Draw.ViewMessage
                       InputHistory
                       IOUtil
                       Events
                       Events.Keybindings
                       Events.ShowHelp
                       Events.MessageSelect
                       Events.Main
                       Events.JoinChannel
                       Events.ChannelScroll
                       Events.ChannelSelect
                       Events.PostListOverlay
                       Events.UrlSelect
                       Events.UserListOverlay
                       Events.LeaveChannelConfirm
                       Events.DeleteChannelConfirm
                       Events.ViewMessage
                       HelpTopics
                       LastRunState
                       Scripts
                       TimeUtils
                       Prelude.MH
                       Types
                       Types.Channels
                       Types.Common
                       Types.DirectionalSeq
                       Types.KeyEvents
                       Types.Messages
                       Types.Users
                       Types.Posts
                       FilePaths
                       TeamSelect
                       Login
                       Markdown
                       Options
                       Util
                       Paths_matterhorn
  build-depends:       base                 >=4.8     && <5
                     , mattermost-api       == 40900.1.0
                     , base-compat          >= 0.9    && < 0.11
                     , unordered-containers >= 0.2    && < 0.3
                     , containers           >= 0.5.7  && < 0.6
                     , semigroups           >= 0.18   && < 0.19
                     , connection           >= 0.2    && < 0.3
                     , text                 >= 1.2    && < 1.3
                     , bytestring           >= 0.10   && < 0.11
                     , stm                  >= 2.4    && < 2.5
                     , config-ini           >= 0.2.2.0 && < 0.3
                     , process              >= 1.4    && < 1.7
                     , microlens-platform   >= 0.3    && < 0.4
                     , brick                >= 0.40   && < 0.41
                     , brick-skylighting    >= 0.2    && < 0.3
                     , vty                  >= 5.23.1 && < 5.24
                     , word-wrap            >= 0.4.0  && < 0.5
                     , transformers         >= 0.4    && < 0.6
                     , text-zipper          >= 0.10   && < 0.11
                     , time                 >= 1.6    && < 1.9
                     , xdg-basedir          >= 0.2    && < 0.3
                     , filepath             >= 1.4    && < 1.5
                     , directory            >= 1.3    && < 1.4
                     , vector               < 0.13
                     , strict               >= 0.3    && < 0.4
                     , hashable             >= 1.2    && < 1.3
                     , cheapskate           >= 0.1    && < 0.2
                     , utf8-string          >= 1.0    && < 1.1
                     , temporary            >= 1.2    && < 1.3
                     , gitrev               >= 1.3    && < 1.4
                     , Hclip                >= 3.0    && < 3.1
                     , mtl                  >= 2.2    && < 2.3
                     , aspell-pipe          >= 0.3    && < 0.4
                     , stm-delay            >= 0.1    && < 0.2
                     , unix                 >= 2.7.1.0 && < 2.7.3.0
                     , skylighting-core     >= 0.7    && < 0.8
                     , timezone-olson       >= 0.1.7   && < 0.2
                     , timezone-series      >= 0.1.6.1 && < 0.2
                     , aeson                >= 1.2.3.0 && < 1.3
                     , async                >= 2.2     && < 2.3
                     , uuid                 >= 1.3     && < 1.4
                     , random               >= 1.1     && < 1.2
                     , deepseq              >= 1.4     && < 1.5
  default-language:    Haskell2010

executable matterhorn
  hs-source-dirs:      programs
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -with-rtsopts=-I0
  default-language:    Haskell2010
  build-depends:       base
                     , matterhorn

test-suite test_messages
  type:               exitcode-stdio-1.0
  main-is:            test_messages.hs
  other-modules:      Cheapskate_QCA
                    , Message_QCA
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -Wall -Werror -fno-warn-orphans
  hs-source-dirs:     test
  build-depends:      base
                    , matterhorn
                    , cheapskate
                    , containers
                    , mattermost-api
                    , bytestring
                    , uuid
                    , time
                    , text
                    , checkers             >= 0.4    && < 0.5
                    , mattermost-api-qc    == 40900.1.0
                    , quickcheck-text      >= 0.1    && < 0.2
                    , string-conversions   >= 0.4    && < 0.5
                    , tasty                >= 0.11   && < 1.2
                    , tasty-hunit          >= 0.9    && < 0.12
                    , tasty-quickcheck     >= 0.8    && < 0.12
                    , Unique               >= 0.4    && < 0.5
                    , vector               <= 0.12.0.1

test-suite matterhorn-benchmark-draw
  type:               exitcode-stdio-1.0
  main-is:            BenchmarkDraw.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  build-depends:      base
                    , aeson
                    , brick
                    , bytestring
                    , microlens-platform
                    , vty
                    , matterhorn
                    , criterion            >= 1.4 && < 1.5
